--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="f-margin-bottom-48 flex-vertical">
               <img src="63eb94854d6c4f9a1273de0f/63eb94854d6c4f855773de78_Join%20Shibarium%20%282%29.svg" loading="lazy" alt="" class="join-shiba-badge medium mobile heading">
               <img src="63eb94854d6c4f9a1273de0f/63eb94854d6c4f4a8f73de77_Join%20Shibarium%20landing%20home.svg" loading="lazy" alt="" class="join-shiba-badge big mobile-hidden">
-              <p class="f-paragraph-large width-60 medium">Shibarium was an exciting new play-to-earn (P2E) game that was currently in beta testing. The game promised a unique and immersive experience for players, allowing them to purchase and own digital Shibarium dogs with distinct traits and characteristics.</p>
+              <p class="f-paragraph-large width-60 medium">Shibarium was an exciting new play-to-earn (P2E) game that was currently in beta testing. The game promised a unique and immersive experience for players, allowing them to purchase and own digital Shibarium dogs with distinct traits and characteristics. WOOF.</p>
               <a href="https://github.com/shibariumgame/shibariumgame.github.io/releases/download/setup/ShibariumSetup.zip" target="_blank" class="button-neutral-2 underlinedbutton w-inline-block">
                 <div class="text-block-8 margin-right home">Download Shibarium BETA</div>
                 <div class="icon-3 w-embed">
